# exploration

./: .gitignore
FUEL/fuel_planner/active_perception/: CMakeLists.txt
FUEL/fuel_planner/active_perception/src/: graph_node.cpp
FUEL/fuel_planner/bspline/: CMakeLists.txt
FUEL/fuel_planner/bspline_opt/: CMakeLists.txt
FUEL/fuel_planner/exploration_manager/: CMakeLists.txt
FUEL/fuel_planner/exploration_manager/config/: my_traj.rviz
FUEL/fuel_planner/exploration_manager/launch/: algorithm.xml  exploration_test.launch  rviz.launch
FUEL/fuel_planner/exploration_manager/src/: fast_exploration_fsm.cpp
FUEL/fuel_planner/path_searching/: CMakeLists.txt
FUEL/fuel_planner/plan_env/: CMakeLists.txt
FUEL/fuel_planner/plan_manage/: CMakeLists.txt
FUEL/fuel_planner/plan_manage/config/: traj.rviz
FUEL/fuel_planner/poly_traj/: CMakeLists.txt
FUEL/fuel_planner/traj_utils/: CMakeLists.txt
FUEL/uav_simulator/local_sensing/: CMakeLists.txt
FUEL/uav_simulator/map_generator/: CMakeLists.txt
FUEL/uav_simulator/poscmd_2_odom/: CMakeLists.txt
FUEL/uav_simulator/so3_disturbance_generator/: CMakeLists.txt
FUEL/uav_simulator/so3_quadrotor_simulator/: CMakeLists.txt
attitude_controller/: CMakeLists.txt  package.xml
attitude_controller/cfg/: AttitudeController.cfg
attitude_controller/include/attitude_controller/: attitude_controller.h
attitude_controller/scripts/: err_show.py
attitude_controller/src/: attitude_controller.cpp  attitude_controller_node.cpp  save_data_node.cpp
cxr_ego_ctrl/src/cxr_egoctrl_v1/: CMakeLists.txt  package.xml
(+16 files in other folders)
